# WinServiceForJavaSpringLicenseApp

./: CMakeLists.txt  globals.cpp  globals.h  http_client.cpp  http_client.h  main.cpp  named_pipe.cpp  named_pipe.h  service.cpp  service.h  utils.cpp  utils.h
